--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -5,9 +5,13 @@
   <title>QA4SM</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
+    name="description"
+    content="Quality Assurance for Soil Moisture - Validation of satellite soil moisture products
+against in-situ and model reference data"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Application is loading...</app-root>
+<app-root>Application is loading...</app-root>
 </body>
 </html>
