--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -8,7 +8,7 @@
   <meta
     name="description"
     content="Quality Assurance for Soil Moisture - Validation of satellite soil moisture products
-against in-situ and model reference data"/>
+against in-situ and model reference data">
   <link rel="icon" type="image/x-icon" href="">
 </head>
 <body>
