Final styling update (#320)
* some styling added so that carousel indicators are positioned higher

* link to the User Manual added

* link to the User Manual added to the help page

* esa logo added, some refinement done on the main page

* information on EODC removed, some styling adjusted

* non-scrolable class moved to global styling

* about page updated

* terms page updated

* title updated, angular icon removed

* some information updated; styling links updated

* some colors updated

* buttons color updated

* validate button styled

* help page updated

* dot added so that selector refers to a class

* icons styled

* add and remove buttons styled

* clear coordinates button styled

* some vertical alignment done

* centering p-panel title on the validation page done

* validate page components made slightly smaller

* adjusting position of the header title

* left side labels added to spatial subsetting

* bootstrap tcol metric added with all needed conditions

* validation config updated with bootstrap tcol

* bootstrap tcol id updated

* validationrun dto updated

* information of bootstraping tcol added to the result summary

* some styling of spatial subsetting field done

* class label moved to global styling file

* some spatial subsetting component styling improved

* validation period component styled, so it looks more like the one on the current prod instance

* tool tips added to the lover left and upper right labels

* class label changed name to small-label to avoid using the same name for different classes

* anomalies component styled, so it looks like the current one

* scaling component styling done

* naming validation field styled

* validation page fixed for no validations available

* validation page rewritten so it uses p-grid class

* some code refinement done

* styling updated

* sorting form styled

* column width changed

* some padding added


--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QA4SM</title>
+  <title>QA4SM Validation Service</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta
     name="description"
     content="Quality Assurance for Soil Moisture - Validation of satellite soil moisture products
-against in-situ and model reference data"/>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+against in-situ and model reference data">
+  <link rel="icon" type="image/x-icon" href="">
 </head>
 <body>
 <app-root>Application is loading...</app-root>
